# minecraft-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  compile_commands.json  vcpkg.json
src/: app.hpp  camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  main.cpp  shader.glsl  shared.inl  textures.cpp  textures.hpp
